--- a/lib/css/_less/app.less
+++ b/lib/css/_less/app.less
@@ -17,8 +17,8 @@
   }
 }
 body {
-  background: black;
-  color: white;
+  //background: black;
+  //color: white;
 }
 ::selection {
 	background: @accent; /* Safari */
