--- a/lib/css/_less/app.less
+++ b/lib/css/_less/app.less
@@ -32,6 +32,7 @@ body {
 }
 .site {
 	margin: 0 auto;
+	background: red;
 }
 .content {
 	min-height: 30em;
@@ -50,4 +51,10 @@ img {
 	.clearfix();
 	padding: 1.5em 0 3em;
 	height: 100%;
+}
+.market__data {
+	background: green;
+}
+.attribution__magic {
+	background: blue;
 }
