giphy, improve css, improve data model

--- a/lib/css/_less/app.less
+++ b/lib/css/_less/app.less
@@ -64,6 +64,12 @@ img {
 		padding: 0 2em;
 	}
 }
+.control__panel {
+	position: absolute;
+	border: 10px solid red;
+	top: 100px;
+	left: 0px;
+}
 .market__data {
 	font-size: @bump;
 	.great {
@@ -75,4 +81,7 @@ img {
 }
 .attribution__magic {
 	text-align: right;
+}
+.attribution__giphy {
+	font-size: .75em;
 }
