start styling popover, fix media query for smartphones

--- a/lib/css/_less/app.less
+++ b/lib/css/_less/app.less
@@ -55,6 +55,28 @@ img {
 	padding: 1.5em 0 3em;
 	height: 100%;
 }
+.introduction__quote {
+	text-align: right;
+	i {
+		font-size: 2.5em;
+		padding: .5em;
+	}
+}
+.quote__popover {
+	background: @accent;
+	color: white;
+	position: absolute;
+	top: 1em;
+	right: 5em;
+	padding: .25em 1em;
+	p {
+		line-height: 1.15;
+		&:last-child {
+			font-size: .75em;
+			text-transform: uppercase;
+		}
+	}
+}
 .information__panel {
 	position: fixed;
 	bottom: 0;
