--- a/lib/css/_less/media-queries.less
+++ b/lib/css/_less/media-queries.less
@@ -27,14 +27,9 @@
 		font-size: .85em;
 	}
 }
-@media only screen and (min-width: 30em) and (max-width: 70em) {
-	.grid li{
-	  width: 45%;
-	  margin-bottom: 4%;
-	}
-} 
+
 @media only screen and (max-width: 30em) {
-    .grid li, .grid.posts li {
+    .grid li.half {
 	  width: 100%;
 	  padding: 1em;
 	  margin-bottom: 5%;
