fix iPhone view csssssssss

--- a/lib/css/_less/app.less
+++ b/lib/css/_less/app.less
@@ -55,28 +55,17 @@ img {
 	padding: 1.5em 0 3em;
 	height: 100%;
 }
-.introduction__quote {
-	text-align: right;
-	i {
-		font-size: 2.5em;
-		padding: .5em;
-	}
-}
 .quote__popover {
-	background: @accent;
-	color: white;
-	position: absolute;
-	top: 1em;
-	right: 5em;
-	padding: .25em 1em;
-	p {
+	p { 
 		line-height: 1.15;
 		&:last-child {
 			font-size: .75em;
+			color: @grayMed;
 			text-transform: uppercase;
 		}
 	}
 }
+
 .information__panel {
 	position: fixed;
 	bottom: 0;
@@ -89,7 +78,7 @@ img {
 .control__panel {
 	position: absolute;
 	border: 10px solid red;
-	top: 100px;
+	top: 0px;
 	left: 0px;
 }
 .market__data {
