--- a/lib/css/_less/variables.less
+++ b/lib/css/_less/variables.less
@@ -9,7 +9,7 @@
 
 
 @accent: #555;
-
+@accentBold: #222;
 
 @aggro: 5px 5px 0px @accent, 4px 4px 0px @accent, 3px 3px 0px @accent, 2px 2px 0px @accent, 1px 1px 0px @accent;
 
