--- a/lib/css/_less/app.less
+++ b/lib/css/_less/app.less
@@ -31,8 +31,6 @@ body {
 	margin: 0 auto;
 }
 .site {
-	margin: 0 auto;
-	padding: 2em 0;
 	img {
 		width: 100%;
 	}
@@ -67,10 +65,9 @@ img {
 }
 
 .information__panel {
-	position: fixed;
-	bottom: 0;
 	width: 100%;
 	margin: 0;
+	padding: 0;
 	li {
 		padding: 0 2em;
 	}
