--- a/lib/css/_less/app.less
+++ b/lib/css/_less/app.less
@@ -80,11 +80,14 @@ img {
 }
 .market__data {
 	font-size: @bump;
+	h1, h3 {
+		margin-bottom: 0;
+	}
 	.great {
-		color: #94e515;
+		color: #1ea50d;
 	}
 	.shit {
-		color: #f25100;
+		color: #f83f24;
 	}
 }
 .attribution__magic {
