--- a/lib/css/styles.css
+++ b/lib/css/styles.css
@@ -125,6 +125,11 @@ hr {
 img {
   max-width: 100%;
 }
+.social-media__panel {
+	position: absolute;
+	top: 10px;
+	left: 10px;
+}
 .quote__popover p {
   line-height: 1.15;
 }
@@ -141,18 +146,18 @@ img {
 .information__panel li {
   padding: 0 2em;
 }
-.control__panel {
-  position: absolute;
-  border: 10px solid red;
-  top: 0px;
-  left: 0px;
-}
 .market__data {
   font-size: 125%;
 }
 .market__data h1,
 .market__data h3 {
   margin-bottom: 0;
+}
+.data--main p, .data--main h3 {
+	display: inline;
+}
+.data--main p {
+	color: #ccc;
 }
 .market__data .great {
   color: #1ea50d;
@@ -195,6 +200,7 @@ img {
     color: #eeeeee;
     display: none;
     position: absolute;
+	z-index: 9999;
     top: 1em;
     right: 3em;
     padding: .25em 1em;
@@ -202,10 +208,20 @@ img {
   .quote__popover p {
     line-height: 1.15;
   }
-  .quote__popover p:last-child {
+  .popover__info {
     font-size: .75em;
     color: #666666;
     text-transform: uppercase;
+  }
+  #stock_name {
+	  font-weight: bold;
+  }
+  .popover__try a {
+	  color: #ffdd03;
+	  font-style: normal;
+  }
+  .popover__try a:hover {
+	  text-decoration: none;
   }
   .information__panel {
     position: fixed;
